# mordred

./: .binstar.yml  .gitignore  .isort.cfg  .travis.yml  .zenodo.json  CONTRIBUTE.md  CONTRIBUTING.md  LICENSE  Pipfile  README.md  README.rst  appveyor.yml  meta.yaml  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bugs.md  feature-request.md
.github/workflows/: ci.yml  docs.yml
ISSUE_TEMPLATE/: bugs.md  question.md
doc/: Makefile  conf.py
doc/api/: mordred.Aromatic.rst  mordred.Bond.rst  mordred.Framework.rst  mordred.Model.rst  mordred.all.rst
docs/: Makefile  atomic_prop.rst  bibliography.rst  conf.py  gen_atomic_props.py  gen_default_descs.py  index.rst  introduction.rst  make.bat  matrix.rst  mordred.rst  refs.bib
docs/README/: 00-header.rst  30-installation.rst  70-examples.rst  90-links.rst
docs/api/: modules.rst  mordred.Atom.rst  mordred.Autocorrelation.rst  mordred.Chi.rst  mordred.Constitutional.rst  mordred.DistanceEdge.rst  mordred.EState.rst  mordred.FragmentComplexity.rst  mordred.Indices.rst  mordred.InformationContent.rst  mordred.Lipinski.rst  mordred.Matrix.rst  mordred.Polarizability.rst  mordred.Property.rst  mordred.Ring.rst  mordred.Smarts.rst  mordred.TPSA.rst  mordred.TopologicalCharge.rst  mordred.Walk.rst  mordred.rst
docs/scripts/: gen_atomic_props.py  gen_default_descs.py  gen_descriptor_doc.py  gen_descriptor_list_xlsx.py  load_path.py
docs/subpackages/: mordred.descriptors.rst  mordred.error.rst  mordred.surface_area.rst  subpackages.rst
examples/: 010-single_mol-single_desc.py  020-single_mol-multiple_desc.py  030-multiple_mol-multiple_desc.py  110-descriptor-arithmetic.py
examples/article/: Code2.py  Code3.py  Code4.py  Code5.py  Code6.py  Code7.py  Code8.py
extra/: gen_sdf_file.py  id_rsa.enc
extra/ci/: after_success.sh  before_install.sh  bump-beta-version.py  bump-dev-version.py  common.sh  conda.sh  gen_conda_build_config.py  get-rdkit-version.py  install.sh  rdkit-versions.txt  requirements-conda.txt  scrub-requirements.py  test_script.sh
extra/requirements/: rdkit-versions.txt  requirements-conda.txt  requirements-flake8.txt  requirements-pip.txt  requirements.txt
mold/: __init__.py  _atomic_property.py  _base.py
mold/Aromatic/: _descriptor.py
mold/Chi/: _descriptor.py
mordred/: ABCIndex.py  AcidBase.py  AdjacencyMatrix.py  Aromatic.py  Atom.py  AtomCount.py  Autocorrelation.py  BCUT.py  BalabanJ.py  BaryszMatrix.py  BertzCT.py  Bond.py  BondCount.py  CPSA.py  CarboAtomsCount.py  CarbonTypes.py  Chi.py  Constitutional.py  DetourMatrix.py  DistanceMatrix.py  EState.py  EccentricConnectivityIndex.py  ExtendedTopochemicalAtom.py  FractionCSP3.py  FragmentComplexity.py  Framework.py  GeometricalIndex.py  GravitationalIndex.py  HeteroAtomsCount.py  HydrogenBond.py  InformationContent.py  KappaShapeIndex.py  Lipinski.py  LogS.py  McGowanVolume.py  MoRSE.py  MoeType.py  MolecularDistanceEdge.py  MolecularId.py  MomentOfInertia.py  (+87 more)
scripts/: after_success.sh  before_install.sh  conda.sh  id_rsa.enc  install.sh  requirements-conda.txt  requirements-flake8.txt  requirements.txt  test_script.sh
temp/: input.smi  o
tests/: gen_sdf_file.py  test_ETA.py  test_SASA.py  test_VEA.py  test_WildmanCrippen.py  test_atomic_property.py  test_base.py  test_by_references.py  test_parallel.py
tools/: gen_sdf_file.py
(+183 files in other folders)
