[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "mordredcommunity"
version = "0.0.0a0"
authors = [{ name = "Jackson Burns", email = "jwburns@mit.edu" }]
license = { text = "BSD-3-Clause" }
description = "Community-Maintained Version of mordred"
classifiers = [
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
urls = { Homepage = "https://github.com/JacksonBurns/mordred-community" }
requires-python = ">=3.7"
dependencies = ["rdkit", "six==1.*", "numpy==1.*", "networkx>=3"]

[project.optional-dependencies]
full = ["pandas", "tqdm"]

[project.readme]
file = "README.md"
content-type = "text/x-rst"

[tool.isort]
profile = "black"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["mordred*"]
exclude = ["docs*", "examples*"]
