[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "mordredcommunity"
version = "2.0.2"
authors = [{ name = "Jackson Burns", email = "jwburns@mit.edu" }]
license = { text = "BSD-3-Clause" }
description = "Community-Maintained Version of mordred"
classifiers = [
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
urls = { Homepage = "https://github.com/JacksonBurns/mordred-community" }
requires-python = ">=3.8"
dependencies = ["rdkit", "six", "numpy", "networkx"]

[project.optional-dependencies]
full = ["pandas", "tqdm", "pyyaml"]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[tool.isort]
profile = "black"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
mordred = ["data/*.txt", "tests/references/**"]

[tool.setuptools.packages.find]
where = ["."]
include = ["mordred*"]
exclude = ["docs*", "examples*"]
